--- a/index.html
+++ b/index.html
@@ -13,59 +13,61 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="bg-dark">
 
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" href="#">GIF Finder</a>
   </nav>
 
-    <div class="container jumbotron mt-4">
-      <div class="row">
-        <div class="col col-md-4">
-          <form>
-            <div class="form-group">
-              <label for="termInput">New Topic</label>
-              <input type="text" class="form-control" id="termInput" placeholder="Enter name..">
-            </div>
-            <button class="btn btn-primary" id="termButton">Add</button>
-          </form>
+  <div class="container jumbotron mt-4 bg-secondary">
+    <div class="row">
+      <div class="col-md-4">
+
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Enter name.." aria-label="Enter name.."
+            aria-describedby="termButton" id="termInput">
+          <div class="input-group-append">
+            <button class="btn btn-info" type="button" id="termButton">Add Term</button>
+          </div>
         </div>
-        <div class="col col-md-8">
-          <div id="terms"></div>
-        </div>
+
+      </div>
+      <div class="col-md-8">
+        <div id="terms"></div>
       </div>
     </div>
+  </div>
 
-    <div class="container mt-4">
-      <div class="row">
-        <div class="col">
-          <div class="card-columns" id="images"></div>
-        </div>
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col">
+        <div class="card-columns" id="images"></div>
       </div>
     </div>
+  </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.0.min.js"
-      integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.0.min.js"
+    integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 
-    <script src="assets/js/app.js"></script>
+  <script src="assets/js/app.js"></script>
 
-    <script>
-      $(document).ready(function () {
+  <script>
+    $(document).ready(function () {
 
-        terms = ['mage', 'fighter', 'ranger', 'warlock']
-        let app = new Application()
-        app.renderterms(terms = terms)
+      terms = ['mage', 'fighter', 'ranger', 'warlock']
+      let app = new Application()
+      app.renderterms(terms = terms)
 
-      })
-    </script>
+    })
+  </script>
 </body>
 
 </html>
