Favorites store locally

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       terms = ['mage', 'fighter', 'ranger', 'warlock']
       let app = new Application()
       app.renderterms(terms = terms)
+      app.loadFavorites()
 
     })
   </script>
