--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
             <button class="btn btn-info" type="button" id="termButton">Add Term</button>
           </div>
         </div>
-
         <div class="input-group mb-3">
-          <button type="button" class="btn btn-info btn-block" id="favoritesButton">View favorites</button>
+          <button type="button" class="btn btn-info btn-block" id="trendingButton"><i class="fas fa-chart-line"></i>
+            Trending on Giphy</button>
         </div>
-
+        <div class="input-group mb-3">
+          <button type="button" class="btn btn-info btn-block" id="favoritesButton"><i class="fas fa-heart"></i> My
+            Favorites</button>
+        </div>
       </div>
       <div class="col-md-8">
         <div id="terms"></div>
@@ -68,8 +71,9 @@
   <script>
     $(document).ready(function () {
 
-      terms = ['mage', 'fighter', 'ranger', 'warlock']
       let app = new Application()
+      app.renderTrending()
+      terms = ['mage', 'fighter', 'ranger', 'warlock']
       app.renderterms(terms = terms)
       app.loadFavorites()
 
